# introtodeeplearning

./: .gitignore
docs/: MNIST_模型训练测试指南.md
lab1/: PT_Part1_Intro.ipynb  PT_Part2_Music_Generation.ipynb  pyproject.toml
lab1/docs/: RNN音乐生成模型深度分析文档.md  音乐生成模型修复文档.md
lab1/solutions/: PT_Part2_Music_Generation_Solution.ipynb
lab2/: PT_Part1_MNIST.ipynb
